Removed APIs from the model files

--- a/model/config.json
+++ b/model/config.json
@@ -1,5 +1,5 @@
 {
-    "host": "",
-    "user": "",
-    "password": ""
+    "host": "127.0.0.1",
+    "user": "root",
+    "password": "mysqlroot"
 }
