--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-Flask==1.1.2
-mysql-connector-python==8.0.20
-mock==2.0.0
-pandas==0.20.3
-numpy==1.18.5
+Flask == 1.1.2
+branca == 0.4.1
+folium == 0.11.0
+mysql_connector_python == 8.0.20
+pandas == 1.0.5
+requests == 2.24.0
+gspread==3.6.0
+oauth2client==4.1.3
+geojson==2.5.0
+geojson-utils==0.0.2
+geopandas==0.6.3
