--- a/credentials.yaml
+++ b/credentials.yaml
@@ -1,6 +1,6 @@
 # MySQL
 mysql:
-  db_name: panoptic
+  database: panoptic
   table_names:
     - external_links
     - frt
@@ -8,10 +8,10 @@ mysql:
     - place
     - technology_partner
   user: root
-  password: root
+  password: admin123
   port: 3306
 
 aws:
   link: ubuntu@ec2-3-7-235-141.ap-south-1.compute.amazonaws.com
 
-flask_location: '/var/www/panoptic_flask'
+flask_location: '/var/www/panoptic_flask/panoptic_flask'
