updated credentials file for mysql connectivity

--- a/credentials.yaml
+++ b/credentials.yaml
@@ -1,18 +1,6 @@
-# MySQL
-mysql:
-  database: panoptic
-  table_names:
-    - external_links
-    - frt
-    - frt_place_link
-    - place
-    - technology_partner
-  db_name: panoptic
-  user: root
-  password: admin123
-  port: 3306
-
-aws:
-  link: ubuntu@ec2-3-7-235-141.ap-south-1.compute.amazonaws.com
-
-flask_location: '/var/www/panoptic_flask/panoptic_flask'
+MYSQL_DATABASE: panoptic
+MYSQL_USERNAME: root 
+MYSQL_PASSWORD: admin123
+MYSQL_HOST: localhost
+MYSQL_PORT: 3306
+AWS_LINK: ubuntu@ec2-3-7-235-141.ap-south-1.compute.amazonaws.com
