--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask == 1.1.2
 branca == 0.4.1
 folium == 0.11.0
+pyyaml==5.3.1
 mysql_connector_python == 8.0.20
 pandas == 1.0.5
 requests == 2.24.0
